--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Odin Recipes</title>
     </head>
     <body>
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/churro.html">Churro</a></li>
+            <li><a href="recipes/agua.html">Agua de Fresas</a></li>
         </ul>
     </body>
 </html>
