--- a/recipes/churro.html
+++ b/recipes/churro.html
@@ -6,7 +6,10 @@
 </head>
 <body>
     <h1>Churro</h1>
-    <img src="churro.webp"/>
+    <img src="churro.webp" alt="A churro"/>
+    
+    <h3>Description</h3>
+    <p>Some gassy churros</p>
 
     <h3>Ingredients</h3>
     <ul>
