--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="lasagna.webp"/>
+    <img src="lasagna.webp" alt="Some lasagna"/>
 
     <h3>Description</h3>
     <p>
@@ -36,6 +36,6 @@
     </ol>
 
     <a href="../index.html">Back Home</a>
-    
+
 </body>
 </html>
