Add small amount of css styling

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="recipes/churro.html">Churro</a></li>
-            <li><a href="recipes/agua.html">Agua de Fresas</a></li>
+            <li><a href="recipes/churro.html" lang="es">Churro</a></li>
+            <li><a href="recipes/agua.html" lang="es">Agua de Fresas</a></li>
         </ul>
     </body>
 </html>
