--- a/recipes/agua.html
+++ b/recipes/agua.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Agua de Fresas</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Agua de Fresas</h1>
+    <h1 lang="es" class="title">Agua de Fresas</h1>
     <img src="agua.webp" alt="Glass of agua de fresas"/>
 
     <h3>Description</h3>
-    <p>Mexican strawberry water</p>
+    <p class="desc">Mexican strawberry water</p>
 
     <h3>Ingredients</h3>
     <ul>    
