--- a/recipes/churro.html
+++ b/recipes/churro.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Churro</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Churro</h1>
+    <h1 lang="es" class="title">Churro</h1>
     <img src="churro.webp" alt="A churro"/>
-    
+
     <h3>Description</h3>
-    <p>Some gassy churros</p>
+    <p class="desc">Some gassy churros</p>
 
     <h3>Ingredients</h3>
     <ul>
