--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1 class="title">Lasagna</h1>
     <img src="lasagna.webp" alt="Some lasagna"/>
 
     <h3>Description</h3>
-    <p>
+    <p class="desc">
         The world's best lasagna.
     </p>
 
